add gallery to all

--- a/src/pages/ursula corbero/ursula-corbero.html
+++ b/src/pages/ursula corbero/ursula-corbero.html
@@ -156,6 +156,141 @@
           </div>
         </div>
       </section>
+      <!------------------------------------------------------------------------->
+      <section class="container gallery-container">
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+
+        <div class="gallery-box">
+          <div class="gallery">
+            <img
+              src="../../../assets/images/poster.jpg"
+              alt="Álvaro Morte - Professor"
+              width="600"
+              height="400"
+            />
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </section>
     </main>
     <footer class="footer">
       <section class="footer-container container">
