--- a/src/pages/itzair ituno/itzair-ituno.html
+++ b/src/pages/itzair ituno/itzair-ituno.html
@@ -9,7 +9,7 @@
       rel="icon"
       href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
     />
-    <title>Alvaro morte</title>
+    <title>Itziar Ituño</title>
     <link rel="stylesheet" href="../actors-style.css" />
     <link
       rel="stylesheet"
