fix actor menu links

--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -41,10 +41,14 @@
         </nav>
         <div class="nav-bottom">
           <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
-            <li class="menu-item"><a href="#">Gallery</a></li>
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
+            <li class="menu-item"><a href="#about">Summery</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
+            <li class="menu-item"><a href="#gallery">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
@@ -78,7 +82,7 @@
     </header>
     <main>
       <!-- hadis section -->
-      <section class="about">
+      <section class="about" id="about">
         <div class="main">
           <img src="../../../assets/images/actors/alvaro-morte_6.jpg" />
           <div class="about-text">
@@ -102,7 +106,7 @@
           </div>
         </div>
       </section>
-      <section class="winning-awards-section">
+      <section class="winning-awards-section" id="winning-awards-section">
         <div class="winning-awards-container container">
           <div class="winning-awards-title">
             <h2>Winning awards</h2>
@@ -153,7 +157,7 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class="container gallery-container">
+      <section class="container gallery-container" id="gallery">
         <div class="gallery-box">
           <div class="gallery">
             <img
