--- a/src/pages/itzair ituno/itzair-ituno.html
+++ b/src/pages/itzair ituno/itzair-ituno.html
@@ -44,11 +44,11 @@
             <li class="menu-item item-vip">
               <a href="../../../index.html">Home</a>
             </li>
-            <li class="menu-item"><a href="#">Summery</a></li>
+            <li class="menu-item"><a href="#about">Summery</a></li>
             <li class="menu-item">
               <a href="#winning-awards-section">Achivment</a>
             </li>
-            <li class="menu-item"><a href="#">Gallery</a></li>
+            <li class="menu-item"><a href="#gallery">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
@@ -79,7 +79,7 @@
     </header>
     <main>
       <!-- hadis section -->
-      <section class="about">
+      <section class="about" id="about">
         <div class="main">
           <img
             src="../../../assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg"
@@ -103,7 +103,7 @@
           </div>
         </div>
       </section>
-      <section class="winning-awards-section">
+      <section class="winning-awards-section" id="winning-awards-section">
         <div class="winning-awards-container container">
           <div class="winning-awards-title">
             <h2>Winning awards</h2>
@@ -153,7 +153,7 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class="container gallery-container">
+      <section class="container gallery-container" id="gallery">
         <div class="gallery-box">
           <div class="gallery">
             <img
