--- a/src/pages/pedro alonso/pedro-alonso.html
+++ b/src/pages/pedro alonso/pedro-alonso.html
@@ -41,10 +41,14 @@
         </nav>
         <div class="nav-bottom">
           <ul class="menu">
-            <li class="menu-item item-vip"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Summery</a></li>
-            <li class="menu-item"><a href="#">Achivment</a></li>
-            <li class="menu-item"><a href="#">Gallery</a></li>
+            <li class="menu-item item-vip">
+              <a href="../../../index.html">Home</a>
+            </li>
+            <li class="menu-item"><a href="#about">Summery</a></li>
+            <li class="menu-item">
+              <a href="#winning-awards-section">Achivment</a>
+            </li>
+            <li class="menu-item"><a href="#gallery">Gallery</a></li>
           </ul>
         </div>
         <div class="header-main">
@@ -75,7 +79,7 @@
       </div>
     </header>
     <main>
-      <section class="about">
+      <section class="about" id="about">
         <div class="main">
           <img src="../../../assets/images/actors/3748301.jpg" />
           <div class="about-text">
@@ -99,7 +103,7 @@
           </div>
         </div>
       </section>
-      <section class="winning-awards-section">
+      <section class="winning-awards-section" id="winning-awards-section">
         <div class="winning-awards-container container">
           <div class="winning-awards-title">
             <h2>Winning awards</h2>
@@ -121,7 +125,10 @@
               portray Logain.
             </p>
           </div>
-          <div class="winning-awards-achievement">
+          <div
+            class="winning-awards-achievement"
+            id="winning-awards-achievement"
+          >
             <div class="achievement">
               <img
                 src="../../../assets/png/actors-page-png/award-actung-black.png"
@@ -150,7 +157,7 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class="container gallery-container">
+      <section class="container gallery-container" id="gallery">
         <div class="gallery-box">
           <div class="gallery">
             <img
