add alvaro images in assets and html

--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -162,7 +162,7 @@
           <div class="gallery-box">
             <div class="gallery">
               <img
-                src="../../../assets/images/poster.jpg"
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro1.jpg"
                 alt="Álvaro Morte - Professor"
               />
             </div>
@@ -171,18 +171,7 @@
           <div class="gallery-box">
             <div class="gallery">
               <img
-                src="../../../assets/images/poster.jpg"
-                alt="Álvaro Morte - Professor"
-                width="600"
-                height="400"
-              />
-            </div>
-          </div>
-  
-          <div class="gallery-box">
-            <div class="gallery">
-              <img
-                src="../../../assets/images/poster.jpg"
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro2.jpg"
                 alt="Álvaro Morte - Professor"
                 width="600"
                 height="400"
@@ -193,7 +182,7 @@
           <div class="gallery-box">
             <div class="gallery">
               <img
-                src="../../../assets/images/poster.jpg"
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro3.jpg"
                 alt="Álvaro Morte - Professor"
                 width="600"
                 height="400"
@@ -204,7 +193,7 @@
           <div class="gallery-box">
             <div class="gallery">
               <img
-                src="../../../assets/images/poster.jpg"
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro4.jpg"
                 alt="Álvaro Morte - Professor"
                 width="600"
                 height="400"
@@ -215,7 +204,18 @@
           <div class="gallery-box">
             <div class="gallery">
               <img
-                src="../../../assets/images/poster.jpg"
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro5.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
+          </div>
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Álvaro Morte/alvaro6.jpg"
                 alt="Álvaro Morte - Professor"
                 width="600"
                 height="400"
