add Úrsula images and html

--- a/src/pages/ursula corbero/ursula-corbero.html
+++ b/src/pages/ursula corbero/ursula-corbero.html
@@ -157,70 +157,72 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class="container gallery-container" id="gallery">
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+      <section class=" gallery-container" id="gallery">
+        <div class="container gallery-wrapper">
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula1.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula2.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula3.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula4.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula5.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="gallery-box">
-          <div class="gallery">
-            <img
-              src="../../../assets/images/poster.jpg"
-              alt="Álvaro Morte - Professor"
-              width="600"
-              height="400"
-            />
+  
+          <div class="gallery-box">
+            <div class="gallery">
+              <img
+                src="../../../assets/images/actors-gallery-images/Úrsula/Úrsula6.jpg"
+                alt="Álvaro Morte - Professor"
+                width="600"
+                height="400"
+              />
+            </div>
           </div>
         </div>
         <div class="clearfix"></div>
