--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="sec6-container container">
           <div class="sec6-box">
             <div class="video-box">
-              <video src="assets/videos/Trailer.mp4" controls></video>
+              <video src="assets/videos/Trailer_2.mp4" controls></video>
             </div>
             <div class="sec6-content-box">
               <div class="sec6-label-box">
