make submin button

--- a/src/pages/pedro alonso/pedro-alonso.html
+++ b/src/pages/pedro alonso/pedro-alonso.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class=" gallery-container" id="gallery">
+      <section class="gallery-container" id="gallery">
         <div class="container gallery-wrapper">
           <div class="gallery-box">
             <div class="gallery">
@@ -169,7 +169,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -180,7 +180,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -191,7 +191,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -202,7 +202,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -213,7 +213,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -239,9 +239,10 @@
             </h4>
             <form action="#">
               <label for="email">
-                email
+                email:
                 <input type="email" id="email" name="email" />
               </label>
+              <input class="footer-btn btn" type="submit" value="Submit" />
             </form>
           </div>
           <div class="footer-box-2">
