--- a/index.html
+++ b/index.html
@@ -362,9 +362,10 @@
             </h4>
             <form action="#">
               <label for="email">
-                email
+                email:
                 <input type="email" id="email" name="email" />
               </label>
+              <input class="footer-btn btn" type="submit" value="Submit" />
             </form>
           </div>
           <div class="footer-box-2">
