--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <!------------------------------------------------------------------------->
-      <section class=" gallery-container" id="gallery">
+      <section class="gallery-container" id="gallery">
         <div class="container gallery-wrapper">
           <div class="gallery-box">
             <div class="gallery">
@@ -167,7 +167,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -178,7 +178,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -189,7 +189,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -200,7 +200,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -211,7 +211,7 @@
               />
             </div>
           </div>
-  
+
           <div class="gallery-box">
             <div class="gallery">
               <img
@@ -238,9 +238,10 @@
             </h4>
             <form action="#">
               <label for="email">
-                email
+                email:
                 <input type="email" id="email" name="email" />
               </label>
+              <input class="footer-btn btn" type="submit" value="Submit" />
             </form>
           </div>
           <div class="footer-box-2">
