--- a/src/pages/itzair ituno/itzair-ituno.html
+++ b/src/pages/itzair ituno/itzair-ituno.html
@@ -99,7 +99,7 @@
               <div class="spen-2">2017</div>
               <p class="span-text">Start Series</p>
             </div>
-            <button type="button">button</button>
+            <button class="btn" type="button">button</button>
           </div>
         </div>
       </section>
